samples/_failures_safe/1761126879_19cebb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_653440bf.c: In function ‘next_token’:
./samples/SAFE/__tmp_653440bf.c:155:14: error: expected ‘;’ at end of input
  155 |         lexer
      |              ^
      |              ;
./samples/SAFE/__tmp_653440bf.c:155:9: error: expected declaration or statement at end of input
  155 |         lexer
      |         ^~~~~
./samples/SAFE/__tmp_653440bf.c:155:9: error: expected declaration or statement at end of input
